<resources>
    <string name="app_name">Firebase Chat</string>
    <string name="new_account_prompt">Need a new account?</string>
    <string name="username">Username</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="create_account">Create Account</string>
    <string name="log_out">Log Out</string>
    <string name="existing_account_prompt">Already have an account?</string>
    <string name="firebase_chat_welcome">Welcome to Firebase Chat</string>
    <string name="login_account">Log In to Your Account</string>
    <string name="create_new_account">Create a New Account</string>
    <string name="log_in">Log In</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="change_image">Change Image</string>
    <string name="change_status">Change Status</string>
    <string name="default_status">Hi there, I am using Firebase Chat.</string>
    <string name="account_settings">Account Settings</string>
    <string name="save_changes">Save Changes</string>
    <string name="your_status">Your Status</string>
    <string name="send_friend_request">Send Friend Request</string>
    <string name="unfriend_person">Unfriend This Person</string>
    <string name="accept_friend_request">Accept Friend Request</string>
    <string name="cancel_friend_request">Cancel Friend Request</string>
    <string name="friend_request_channel">friend_requests</string>
    <string name="decline_friend_request">Decline Friend Request</string>
    <string name="users_key">Users</string>
    <string name="image_link_key">imageLink</string>
    <string name="name_key">name</string>
    <string name="status_key">status</string>
    <string name="thumbnail_key">thumbImageLink</string>
    <string name="device_token_key">deviceToken</string>
    <string name="friends_key">Friends</string>
    <string name="user_id">user_id</string>
    <string name="friend_requests_key">Friend_Requests</string>
    <string name="request_type_key">request_type</string>
    <string name="notifications_key">Notifications</string>
    <string name="current_status">current_status</string>
    <string name="profile_images_folder">profile_images</string>
    <string name="thumbnails_folder">thumbs</string>
    <string name="online_key">online</string>
    <string name="username_key">username</string>
    <string name="last_seen_key">lastSeen</string>
    <string name="online">Online</string>
    <string name="chats_key">Chats</string>
    <string name="seen_key">seen</string>
    <string name="timestamp_key">timestamp</string>
    <string name="messages_key">messages</string>
    <string name="message_key">message</string>
    <string name="send_key">send</string>
    <string name="type_key">type</string>
    <string name="time_key">time</string>
    <string name="from_key">from</string>
    <string name="enter_message">Enter Message...</string>
    <string name="default_thumb">default</string>
    <string name="message_image_storage">message_images</string>

</resources>
